# covid-pipeline

./: .gitignore  Dockerfile  README.md  config.yaml  england_pillar1_config.yaml  england_pillar2_config.yaml  enqueue_pipeline.sh  northernireland_config.yaml  pipeline.sge  pyproject.toml  scotland_config.yaml  uk_config.yaml  wales_config.yaml
covid_pipeline/: __init__.py  formats.py  pipeline.py  ruffus_pipeline.py  summarizer.py
covid_pipeline/tasks/: __init__.py  crystalcast_output.py  lancs_risk_report.py  overall_rt.py  summarize.py  summary_dha.py  summary_longformat.py
tests/: test_summary_dha.py
