[tool.poetry]
name = "covid-pipeline"
version = "0.1.1-alpha.6"
description = "COVID19 daily production"
authors = ["Chris Jewell <c.jewell@lancaster.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
xarray = {extras = ["netcdf4"], version = "^0.17.0"}
s3fs = "^2021.04.0"
ruffus = "^2.8.4"
openpyxl = "^3.0.7"
matplotlib = "^3.4.1"
descartes = "^1.1.0"
enum34 = "1.1.8"
mapclassify = "^2.4.2"
dhaconfig = {git = "https://gitlab.com/achale/dhaconfig.git", tag="v0.0.2"}
covid19uk = {git = "https://gitlab.com/chicas-covid19/covid19uk.git", tag="v0.8.0-alpha.4"}

[tool.poetry.dev-dependencies]
jedi = "^0.17.2"
flake8 = "^3.8.4"
black = "^20.8b1"
hide-code = "^0.6.0"
zarr = "^2.7.0"
jupyterlab = "^3.0.12"
ipympl = "^0.6.3"
descartes = "^1.1.0"
seaborn = "^0.11.1"
ipython = "^7.23.1"

[tool.black]
line-length = 80
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
